[package]
name = "yapp"
version = "0.1.0"
authors = ["Charles Sibbald <casibbald@gmail.com>"]
edition = "2024"
default-run = "yapp-controller"
license = "Apache-2.0"
publish = false


[workspace.dependencies]
loco-rs = { version = "0.12.0", default-features = false }

[dependencies]

loco-rs = { workspace = true, features = ["cli"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.74"
axum = "0.7.5"

futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde_yaml = "0.9.25"
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry-otlp = { version = "0.27.0", optional = true }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
prometheus-client = "0.23.1"
http = "1.2.0"
assert-json-diff = "2.0.2"
tower-test = "0.4.0"
toml = "0.8.19"


[[bin]]
doc = false
name = "yapp-controller"
path = "src/bin/main.rs"
required-features = []


[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.24.0"
loco-rs = { workspace = true, features = ["testing", "cli"] }
insta = { version = "*", features = ["redactions", "yaml", "filters"] }
assert-json-diff = "2.0.2"
hyper = "1"
tower-test = "0.4.0"


[dependencies.kube]
features = ["runtime", "client", "derive" ]
version = "0.98.0"

[features]
default = []
telemetry = ["opentelemetry-otlp"]


